--- a/content/posts/journal/2022/11/23.md
+++ b/content/posts/journal/2022/11/23.md
@@ -3,7 +3,7 @@ title: November 23rd, 2022
 subtitle: Journal entry for 2022-11-23; eleven lines
 date: 2022-11-23
 lastupdated: 2022-11-23
-group: '2022-11'
+group: "2022-11"
 published: true
 layout: post
 topics: [journal]
@@ -12,24 +12,24 @@ category: journal
 
 Once again—the squirrels are fat; and I am alone.
 
---- 
+---
 
-*Where have you been?* I said to myself—
+_Where have you been?_ I said to myself—
 
-*where on earth did you go?*
+_where on Earth did you go?_
 
-*You should not look there,* came the reply. 
+_You should not look there,_ came the reply.
 
-*I thought that you would've known.*
+_I thought that you would've known._
 
-Did you seek thyself in the roars of silence? 
+Did you seek yourself in the roars of silence?
 
-*in the deaf'ning and blinding snow?*
+_in the deaf'ning and blinding snow?_
 
-Did you search in all your joys and pain? 
+Did you search through the veils of joy and pain?
 
-*or in the face of those you know?*
+_or in the face of those you know?_
 
-Birth and death hath torn me asunder; now *you* must endure the throe—
+Birth and death hath torn me asunder; now _you_ must endure the throe—
 
-Only then will you find that which you need, and the answers of far ago.
+Only then will you find that which you seek; and the answers of far-ago.
