--- a/content/posts/journal/2022/12/29.md
+++ b/content/posts/journal/2022/12/29.md
@@ -10,4 +10,4 @@ topics: [journal]
 category: journal
 ---
 
-And how tragic it is that when one swims, one never fails to muddy the waters!
+And how tragic that it is the very act of swimming that muddies the waters!
